syntax = "proto3";

package kgis.datalake.movie;

option java_package = "kgis.datalake.movie.protobuf";
option java_outer_classname = "MovieRepositoryProto";
option java_multiple_files = true;

service MovieRepository {

    // Gets movie information.
    rpc GetMovieInfo (MovieInfoRequest) returns (MovieInfoResponse) {}
}

message MovieInfoRequest {
    string movieId = 1;
}

message MovieInfoResponse {
    string movieId = 1;
    string shortName = 2;
    string longName = 3;
    string description = 4;
    bool active = 5;
    repeated SkuInfo skus = 6;
}

message SkuInfo {
    string sku = 1;
    bool active = 2;
    string size = 3;
    PriceInfo prices = 4;
}

message PriceInfo {
    double list = 1;
    double msrp = 2;
    double sale = 3;
    string formattedList = 4;
    string formattedMsrp = 5;
    string formattedSale = 6;
}
